# DRFDocker

./: Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
backend/: manage.py
backend/apps/books/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/books/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/config/extra_conf/: __init__.py  drf_yasg_conf.py
client/: index.html
